modules/cli/src/test/resources/good/efsm/gdo/Test10.scr
module good.efsm.gdo.Test10;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		do Proto1Aux1(A, B, C);
	}
	or
	{
		do Proto1Aux2(A, B, C);
	}
}

aux global protocol Proto1Aux1(role A, role B, role C)
{
	choice at A
	{
		3() from A to B;
		3() from A to C;
		do Proto1Aux1(A, B, C);
	}
}

aux global protocol Proto1Aux2(role A, role B, role C)
{
	choice at A
	{
		2() from A to B;
		do Proto1Aux1(A, B, C);
	}
}

