modules/cli/src/test/resources/bad/reach/globals/gdo/Test02b.scr
module bad.reach.globals.gdo.Test02b;


aux global protocol Proto1(role A, role B)
{
	1() from A to B;
	do Proto1(A, B);
	//3() from A to B;
}

global protocol Proto2(role C, role D)
{
	2() from C to D;
	do Proto2(C, D);
	2() from C to D;
}
